reordering and new convolution notebook

--- a/SelectedTopicsInLifeInsurance/SelectedTopicsExam.ipynb
+++ b/SelectedTopicsInLifeInsurance/SelectedTopicsExam.ipynb
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -517,13 +517,15 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "path = 'Images_presentation/'\n",
+    "\n",
     "plt.plot(ages, rsvs, linewidth=0.6, marker = \".\")\n",
     "plt.title(\"Reserves at different ages of the insured (active)\")\n",
     "plt.xlabel(\"Age of the insured\")\n",
     "plt.ylabel(\"Reserves\")\n",
     "plt.grid(color = 'grey', linestyle = '--', linewidth = 0.5)\n",
     "plt.xticks(np.arange(min(ages), max(ages)+1, 5))\n",
-    "plt.savefig('optimalreserves.png', dpi=300, bbox_inches='tight')\n",
+    "plt.savefig(path + 'optimalreserves.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -634,7 +636,7 @@
     "plt.grid(color = 'grey', linestyle = '--', linewidth = 0.5)\n",
     "plt.xticks(np.arange(min(ages), max(ages)+1, 5))\n",
     "\n",
-    "plt.savefig('comparisonstrategies.png', dpi=300, bbox_inches='tight')\n",
+    "plt.savefig(path + 'comparisonstrategies.png', dpi=300, bbox_inches='tight')\n",
     "\n",
     "plt.show()"
    ]
@@ -675,7 +677,7 @@
     "          fancybox=True, shadow=True, ncol=1)\n",
     "plt.setp(ax.get_yticklabels()[0], visible=False)\n",
     "plt.setp(ax.get_yticklabels()[-1], visible=False)\n",
-    "plt.savefig('strategyapplied.png', dpi=300, bbox_inches='tight')\n",
+    "plt.savefig(path +'strategyapplied.png', dpi=300, bbox_inches='tight')\n",
     "\n",
     "plt.show()"
    ]
@@ -722,7 +724,7 @@
     "plt.ylabel(\"Reserves\")\n",
     "plt.grid(color = 'grey', linestyle = '--', linewidth = 0.5)\n",
     "plt.xticks(np.arange(min(ages), max(ages)+1, 5))\n",
-    "plt.savefig('optimalreservesall.png', dpi=300, bbox_inches='tight')\n",
+    "plt.savefig(path +'optimalreservesall.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -753,7 +755,7 @@
     "plt.ylabel(\"Reserves\")\n",
     "plt.grid(color = 'grey', linestyle = '--', linewidth = 0.5)\n",
     "plt.xticks(np.arange(min(ages), max(ages)+1, 5))\n",
-    "plt.savefig('optimalreservesdisabled1.png', dpi=300, bbox_inches='tight')\n",
+    "plt.savefig(path +'optimalreservesdisabled1.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -793,7 +795,7 @@
     "plt.ylabel(\"Probability\")\n",
     "plt.grid(color = 'grey', linestyle = '--', linewidth = 0.5)\n",
     "plt.xticks(np.arange(min(ages), max(ages)+1, 5))\n",
-    "plt.savefig('reactivationprobability.png', dpi=300, bbox_inches='tight')\n",
+    "plt.savefig(path +'reactivationprobability.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
